--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,284 @@
-/*
- * Estilos de tu proyecto
- */
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body, html {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-image: url(../assets/images/hero.gif);
+  background-size: cover;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
+.white {
+  color: white;
+}
+
+.purple {
+  color: #352384;
+}
+
+.clear-left {
+  clear: left;
+}
+
+/**/
+
+/*MENÚ DE NAVEGACIÓN*/
+nav {
+  padding: 20px 80px;
+  margin-bottom: 78px;
+}
+
+.logo {
+  width: 60%;
+  float: left;
+  padding-top: 15px;
+}
+
+.logo img {
+  width: 9%;
+}
+
+.menu {
+  width: 40%;
+  float: left;
+  padding-top: 17px;
+}
+
+.menu li {
+  display: inline-block;
+  list-style-type: none;
+  padding: 11px 19px;
+}
+
+.log-in {
+  border: 1px solid white;
+  border-radius: 10px;
+}
+
+/*SECCIÒN SIGN UP*/
+.sign-up {
+  float: right;
+  width: 40%;
+  padding: 55px 0 0 55px;
+  box-sizing: border-box;
+  display: block;
+  background-color: white;
+}
+
+.sign-up h2 {
+  font-size: 39px;
+  font-weight: 600;
+  line-height: 1;
+  letter-spacing: -2px;
+}
+
+.subtitle {
+  letter-spacing: -1px;
+  padding: 10px 0 30px 0;
+  font-weight: 500;
+}
+
+.sign-up input[type=text] {
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #352384;
+  box-shadow: none;
+  width: 90%;
+  color: #bbb;
+  padding: 0 0 8px 0;
+  margin-bottom: 30px;
+}
+
+.sign-up button {
+  background-color: #FF00BF;
+  padding: 16px 20px;
+  font-size: 16px;
+  border-radius: 10px;
+  color: #eee;
+  font-weight: 100;
+}
+
+.sign-up a{
+  color: #728099;
+  margin-left: 12px;
+  font-weight: 500;
+  letter-spacing: -1px;
+  font-size: 14px;
+}
+
+.legal {
+  color: #728099;
+  font-size: 9px;
+  font-weight: 500;
+  padding: 30px 0;
+}
+
+.legal p{
+  line-height: 2.6;
+}
+
+/*SECCIÓN BENEFITS*/
+
+
+.benefits {
+  background: linear-gradient(#76278F, #2B1E66);
+  /*background: linear-gradient(transparent,#76278f);*/
+  width: 100%;
+  height: 100%;
+  display: block;
+  clear: both;
+  padding-top: 130px;
+}
+
+.text-benefits {
+  width: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  float: left;
+  padding: 0 0 0 150px;
+}
+
+.use-image {
+  width: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  float: left;
+  padding: 0 0 0 30px;
+}
+
+.use-image img {
+  width: 75%;
+}
+
+/*SECCION VIDEOS*/
+.text-video {
+  width: 100%
+}
+
+.un-tercio {
+  width: 33%;
+  display: inline-block;
+  float: left;
+  padding: 30px 50px 0 50px;
+  box-sizing: border-box;
+}
+
+.dos-tercios {
+  width: 67%;
+  display: inline-block;
+  float: left;
+}
+
+.title-video {
+  font-size: 28px;
+  letter-spacing: -2px;
+  font-weight: 600;
+  padding-bottom: 20px;
+}
+
+.un-tercio p {
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: -0.5px;
+  line-height: 1.4;
+}
+
+/*FOOTER*/
+
+footer {
+  background-color: #333447;
+  box-sizing: border-box;
+  width: 100%;
+
+}
+
+.footer-menu {
+  padding: 60px 0 0 120px;
+}
+
+
+.column-footer {
+  width: 20%;
+  display: inline-block;
+  box-sizing: border-box;
+  margin-right: 20px;
+}
+
+.column-footer li {
+  list-style-type: none;
+  padding: 0 0 30px 0;
+  font-size: 14px;
+}
+
+li:first-child {
+  font-weight: 600;
+  font-size: 17px;
+}
+
+.column-footer li:hover{
+  color: #FF00BF;
+}
+
+.column-footer img {
+  width: 125px;
+  display: block;
+  padding: 0 0 30px 0;
+}
+
+hr {
+  width: 56%;
+  display: block;
+  margin: 20px auto;
+}
+
+.copyright {
+  text-align: center;
+  padding: 26px 0 45px 0;
+  font-size: 14px;
+}
+
+.icon-facebook:before {
+  content: "\ea90";
+}
+
+.icon-instagram:before {
+  content: "\ea92";
+}
+
+.icon-twitter:before {
+  content: "\ea96";
+}
+
+.social-media {
+  text-align: center;
+  padding: 40px 0 0 0;
+}
+
+.social-media a {
+  margin: 0 30px;
+}
+
+.circle {
+  border-radius: 100%;
+  border: 1px solid white;
+  height: 30px;
+  width: 30px;
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  display: inline-block;
+  line-height: 32px;
+}
