--- a/css/main.css
+++ b/css/main.css
@@ -5,14 +5,14 @@
 
 body, html {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
   background-image: url(../assets/images/hero.gif);
   background-size: cover;
-  height: 100%;
+  height: 100vh;
   background-repeat: no-repeat;
   background-position: center center;
 }
@@ -134,10 +134,10 @@ nav {
 
 
 .benefits {
-  background: linear-gradient(#76278F, #2B1E66);
+  background: linear-gradient(transparent, #76278C, #76278F, #64308F, #362A66, #2B1E66);
   /*background: linear-gradient(transparent,#76278f);*/
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: block;
   clear: both;
   padding-top: 130px;
@@ -148,7 +148,19 @@ nav {
   display: inline-block;
   box-sizing: border-box;
   float: left;
-  padding: 0 0 0 150px;
+  padding: 92px 50px 0 148px;
+}
+
+.text-benefits h2{
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: -2px;
+  padding: 0 0 15px 0;
+}
+
+.text-benefits p {
+  padding-bottom: 60px;
+  line-height: 1.4;
 }
 
 .use-image {
@@ -156,7 +168,7 @@ nav {
   display: inline-block;
   box-sizing: border-box;
   float: left;
-  padding: 0 0 0 30px;
+  padding: 60px 0 0 30px;
 }
 
 .use-image img {
